# payment-data-analytics

./: .gitignore  ANALYSIS_REPORT.md  DEPLOYMENT.md  README.md  TODO.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: subscriptions.csv  transactions.csv  users.csv
payment_intelligence/: __init__.py  data_generator.py  etl_logic.py
scripts/: generate_data.py  run_analysis.py
src/payment_intelligence/: __init__.py  data_generator.py  etl_logic.py
